# lordsawar-fork

./: .gitignore  CLAUDE.md  DEPENDENCIES  INSTALL  Makefile.am  NEWS  RELEASE  TODO  WINDOWS  autogen.sh  build-macos.sh  config.h.in  configure.ac  copy-gnome-icons.sh  create-lw-file  make-windows-installer.sh  make-windows-zip.sh  make-windows-zip.sh.in
.claude/commands/: create-plan.md  implement-plan.md  iterate-plan.md
.claude/docs/: ARCHITECTURE.md  BATTLE_MECHANICS.md  QUICKSTART.md
.claude/plans/: add-army-hp-to-info-label.md  battle-display-improvements.md  combat-debug-visualization.md  debug-battle-animation-display.md  deterministic-combat.md
dat/: citynames.xml.in  citynames.xml.in.h  heronames.xml.in  heronames.xml.in.h  lordsawar.desktop  lordsawar.desktop.in.in.h  ruinnames.xml.in.h  signposts.xml.in.h  templenames.xml.in.h
dat/army/bigdefault/: Makefile.am  bigdefault.lwa.in  bigdefault.lwa.in.h
dat/army/default/: Makefile.am  default.lwa.in
dat/army/duel/: Makefile.am  duel.lwa.in
dat/citysets/bigdefault/: Makefile.am  README  bigdefault.lwc.in.h
dat/citysets/bigdol/: Makefile.am  README  bigdol.lwc.in.h
dat/citysets/default/: Makefile.am  README  default.lwc.in.h
dat/citysets/dol/: Makefile.am  README  dol.lwc.in.h
dat/glade/: Makefile.am  README  about-dialog.ui  about-dialog.ui.h  army-bonus-dialog.ui  army-bonus-dialog.ui.h  army-gains-level-dialog.ui  army-gains-level-dialog.ui.h  army-info-window.ui  buy-production-dialog.ui  buy-production-dialog.ui.h  characters-dialog.ui  characters-dialog.ui.h  city-defeated-dialog.ui  city-defeated-dialog.ui.h  city-info-window.ui  city-looted-dialog.ui  city-looted-dialog.ui.h  city-pillaged-dialog.ui  city-pillaged-dialog.ui.h  city-raze-dialog.ui  city-raze-dialog.ui.h  city-razed-dialog.ui  city-razed-dialog.ui.h  city-rename-dialog.ui  city-rename-dialog.ui.h  city-sacked-dialog.ui  city-window.ui  city-window.ui.h  destination-dialog.ui  destination-dialog.ui.h  diplomacy-dialog.ui  diplomacy-dialog.ui.h  diplomacy-report-dialog.ui  fight-order-dialog.ui  fight-order-dialog.ui.h  fight-window.ui  fighter.ui  game-button-box-large-screen.ui  game-button-box-large-screen.ui.h  (+102 more)
dat/glade/editor/: Makefile.am  armyset-info-dialog.ui  armyset-info-dialog.ui.h  armyset-selector-editor-dialog.ui  armyset-selector-editor-dialog.ui.h  armyset-window.ui  armyset-window.ui.h  backpack-editor-dialog.ui  backpack-editor-dialog.ui.h  battle-calculator-dialog.ui  battle-calculator-dialog.ui.h  city-editor-dialog.ui  city-editor-dialog.ui.h  cityset-info-dialog.ui  cityset-info-dialog.ui.h  cityset-window.ui  cityset-window.ui.h  editor-quit-dialog.ui  editor-quit-dialog.ui.h  editor-save-changes-dialog.ui  editor-save-changes-dialog.ui.h  editor-splash-window.ui  editor-splash-window.ui.h  fight-order-editor-dialog.ui  fight-order-editor-dialog.ui.h  hero-editor-dialog.ui  hero-editor-dialog.ui.h  heroes-dialog.ui  heroes-dialog.ui.h  image-editor-dialog.ui  image-editor-dialog.ui.h  item-editor-dialog.ui  item-editor-dialog.ui.h  itemlist-dialog.ui  itemlist-dialog.ui.h  keeper-dialog.ui  keeper-dialog.ui.h  main-window.ui  main-window.ui.h  map-info-dialog.ui  (+66 more)
dat/map/dol/: dol.map.in
dat/map/duel/: duel.map.in
dat/shield/default/: Makefile.am  README  default.lws.in  default.lws.in.h
dat/shield/dol/: Makefile.am  README  dol.lws.in  dol.lws.in.h
dat/shield/plain/: Makefile.am  plain.lws.in  plain.lws.in.h
dat/tilesets/bigdefault/: Makefile.am  README  bigdefault.lwt.in  bigdefault.lwt.in.h
dat/tilesets/bigstark/: Makefile.am  README  bigstark.lwt.in  bigstark.lwt.in.h
dat/tilesets/bigwesnoth/: Makefile.am  README  bigwesnoth.lwt.in  bigwesnoth.lwt.in.h
dat/tilesets/stark/: Makefile.am  README  stark.lwt.in  stark.lwt.in.h
dat/tilesets/wesnoth/: Makefile.am  README  wesnoth.lwt.in  wesnoth.lwt.in.h
dat/various/: Makefile.am
dat/various/xslt/: Makefile.am  README  as-0.3.0-0.3.3.xsl  c-0.2.1-0.2.2.xsl  gs-0.2.1-0.3.2.xsl  gs-0.3.2-0.3.3.xsl  ss-0.2.1-0.3.2.xsl  ss-0.3.2-0.3.3.xsl  ts-0.2.1-0.3.2.xsl  ts-0.3.2-0.3.3.xsl
doc/: Savefile
help/: lordsawar-game-host-client.6  lordsawar-game-host-server.6  lordsawar-game-list-client.6  lordsawar-game-list-server.6  lordsawar-import.6  lordsawar.6  lordsawar.xml  main_screen.xcf
m4/: intltool.m4
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  da.po  fr.po  ja.po  ru.po  sv.po  tr.po
src/: AICityInfo.cpp  AICityInfo.h  AI_Allocation.cpp  AI_Allocation.h  AI_Analysis.cpp  AI_Diplomacy.cpp  Backpack.cpp  Backpack.h  Commentator.cpp  Configuration.cpp  Configuration.h  CreateScenario.cpp  CreateScenario.h  CreateScenarioRandomize.cpp  CreateScenarioRandomize.h  File.cpp  File.h  GameMap.cpp  GameMap.h  GameScenario.cpp  GameScenario.h  GameScenarioOptions.cpp  GameScenarioOptions.h  ImageCache.cpp  ImageCache.h  Item.cpp  Item.h  ItemProto.cpp  ItemProto.h  Itemlist.cpp  Itemlist.h  Location.cpp  Location.h  LocationBox.cpp  LocationBox.h  LocationList.h  Makefile.am  MapBackpack.cpp  MapBackpack.h  MapGenerator.cpp  (+255 more)
src/ghs/: Makefile.am  gamehost-server.cpp  gamehost-server.h  ghs-client-tool.cpp
src/gls/: Makefile.am  gamelist-server.cpp  gls-client-tool.cpp  gls-client-tool.h
src/gui/: Makefile.am  army-bonus-dialog.cpp  army-bonus-dialog.h  army-gains-level-dialog.cpp  army-info-tip.cpp  bar-chart.cpp  bar-chart.h  builder-cache.cpp  buy-production-dialog.cpp  characters-dialog.cpp  characters-dialog.h  city-info-tip.cpp  city-window.cpp  city-window.h  destination-dialog.cpp  diplomacy-dialog.cpp  diplomacy-report-dialog.cpp  driver.cpp  driver.h  fight-order-dialog.cpp  fight-window.cpp  fight-window.h  font-size.cpp  font-size.h  game-button-box.cpp  game-button-box.h  game-lobby-dialog.cpp  game-lobby-dialog.h  game-options-dialog.cpp  game-options-dialog.h  game-preferences-dialog.cpp  game-preferences-dialog.h  game-window.cpp  game-window.h  hero-dialog.cpp  hero-dialog.h  hero-levels-dialog.cpp  hero-offer-dialog.cpp  hero-offer-dialog.h  history-report-dialog.cpp  (+54 more)
src/utils/: Makefile.am  import.cpp  upgrade-file.cpp
(+6 files in other folders)
