MAINTAINERCLEANFILES= Makefile.in

gladedir = $(datadir)/lordsawar/glade/editor
glade_DATA = \
main-window.ui \
signpost-editor-dialog.ui \
temple-editor-dialog.ui \
ruin-editor-dialog.ui \
stack-editor-dialog.ui \
select-army-dialog.ui \
players-dialog.ui \
city-editor-dialog.ui \
map-info-dialog.ui \
new-map-dialog.ui \
switch-sets-dialog.ui \
armyset-window.ui \
armyset-info-dialog.ui \
itemlist-dialog.ui \
reward-editor-dialog.ui \
select-item-dialog.ui \
reward-list-dialog.ui \
select-hidden-ruin-dialog.ui \
select-character-dialog.ui \
tileset-window.ui \
tileset-info-dialog.ui \
tile-preview-dialog.ui \
tileset-selector-editor-dialog.ui \
armyset-selector-editor-dialog.ui \
tileset-flag-editor-dialog.ui \
tileset-explosion-picture-editor-dialog.ui \
backpack-editor-dialog.ui \
planted-standard-editor-dialog.ui \
item-editor-dialog.ui \
hero-editor-dialog.ui \
tar-file-masked-image-editor-dialog.ui \
image-editor-dialog.ui \
editor-quit-dialog.ui \
tileset-smallmap-building-colors-dialog.ui \
tileset-move-bonus-image-dialog.ui \
cityset-info-dialog.ui \
cityset-window.ui \
shieldset-info-dialog.ui \
tilestyle-organizer-dialog.ui \
shieldset-window.ui \
smallmap-editor-dialog.ui \
editor-splash-window.ui \
fight-order-editor-dialog.ui \
road-editor-tip.ui \
battle-calculator-dialog.ui \
media-dialog.ui \
validation-dialog.ui \
stone-editor-dialog.ui \
editor-save-changes-dialog.ui \
heroes-dialog.ui \
keeper-dialog.ui \
mask-validation-dialog.ui \
strategy-editor-dialog.ui

EXTRA_DIST = $(glade_DATA) \
README
