MAINTAINERCLEANFILES= Makefile.in

xsltdir = $(datadir)/lordsawar/various/xslt
xslt_DATA = \
    as-0.2.1-0.3.0.xsl \
    as-0.3.0-0.3.3.xsl \
    gs-0.2.0-0.2.1.xsl \
    gs-0.2.1-0.3.2.xsl \
    gs-0.3.2-0.3.3.xsl \
    ss-0.2.1-0.3.2.xsl \
    ss-0.3.2-0.3.3.xsl \
    ts-0.2.1-0.3.2.xsl \
    ts-0.3.2-0.3.3.xsl \
    c-0.2.1-0.2.2.xsl

EXTRA_DIST = \
    README \
    ${xslt_DATA}


# test the xsl files with `xsltproc FILE.xsl FILE.xml'
